[gd_scene load_steps=2 format=2]

[ext_resource path="res://accesorios/menu/settings/settings.gd" type="Script" id=1]

[node name="settings" type="Control"]
margin_right = 1024.0
margin_bottom = 607.0
script = ExtResource( 1 )

[node name="button_low" type="Button" parent="."]
margin_left = 219.0
margin_top = 259.0
margin_right = 289.0
margin_bottom = 322.0
text = "<"

[node name="button_hi" type="Button" parent="."]
margin_left = 745.0
margin_top = 259.0
margin_right = 815.0
margin_bottom = 322.0
text = ">"

[node name="text_res" type="TextEdit" parent="."]
margin_left = 347.0
margin_top = 259.0
margin_right = 724.0
margin_bottom = 322.0
readonly = true

[node name="Settings" type="Node2D" parent="."]

[node name="button_exit" type="Button" parent="."]
margin_left = 929.0
margin_top = 5.0
margin_right = 1020.0
margin_bottom = 58.0
text = "X"

[connection signal="pressed" from="button_low" to="." method="_on_button_low_pressed"]
[connection signal="pressed" from="button_hi" to="." method="_on_button_hi_pressed"]
[connection signal="pressed" from="button_exit" to="." method="_on_button_exit_pressed"]
